2019-04-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 44254: Src/compat.c: make quite sure we've reached "/"
	in zgetdir(), else report an error.

2019-04-22  Matthew Martin  <phy1729@gmail.com>

	* unposted: Completion/Base/Utility/_pick_variant: Use
	${(P) ::= rather than eval.

	* 44242: Completion/Unix/Command/_chown,
	Completion/Unix/Command/_ln, Completion/Unix/Command/_mv,
	Completion/Unix/Command/_rm, Completion/Unix/Command/_rmdir:
	Use _pick_variant -b to detect builtins.

2019-04-18  Mikael Magnusson  <mikachu@gmail.com>

	* dana: 43288: Src/prompt.c: fix line-broken prompts

2019-04-12  dana  <dana@dana.is>

	* unposted: NEWS: Document recent feature additions

	* 44198: Doc/Zsh/options.yo, Src/builtin.c, Src/options.c,
	Src/zsh.h: Add cd_silent option to suppress all cd output

2019-04-10  Peter Stephenson  <p.stephenson@samsung.com>

	* Eric Freese: 44214: Src/exec.c: <(...) substitutions shouldn't
	grab the terminal.

	* Roman Perepelitsa: 44215: Doc/Zsh/zle.yo,
	Src/Zle/iwidgets.list, Src/Zle/zle.h, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Src/Zle/zle_utils.c, Src/Zle/zle_vi.c:
	Maintain LASTWIDGET across reset-prompt, avoiding side effects
	of asynchronous notifications.

	* 44202: Src/Zle/compctl.c: Rewrite to use memmove()
	for possibly overlapping copy.

2019-04-10  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 44210: Completion/Linux/Command/_findmnt,
	Completion/Linux/Command/_lsblk: Add _findmnt and update _lsblk.

2019-04-04  Matthew Martin  <phy1729@gmail.com>

	* 44202 (tweaked): Completion/Base/Core/_normal,
	Doc/Zsh/compsys.yo: Add -P to reset precommands.

	* 44201: Completion/Base/Core/_main_complete,
	Completion/Base/Utility/_pick_variant,
	Completion/Linux/Command/_setsid,
	Completion/Zsh/Command/_command,
	Completion/Zsh/Type/_command_names: Check for external forcing
	precommand.

	* 44200 (tweaked): Completion/Base/Core/_normal,
	Completion/Linux/Command/_setsid,
	Completion/Zsh/Command/_builtin,